--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -1,35 +1,35 @@
-<% content_for :meta_title, "#{@last_offer.glass_bottles} + #{@last_offer.plastic_bottles} is on #{DEFAULT_META["meta_product_name"]}" %>
-<% content_for :meta_description, @last_offer.comment %>
-<% content_for :meta_image, cl_image_path(@last_offer.user.photo) %>
+<% content_for :meta_title, "#{Offer.last.glass_bottles} + #{Offer.last.plastic_bottles} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, Offer.last.comment %>
+<% content_for :meta_image, cl_image_path(Offer.last.user.photo) %>
 
 <div class="container">
 <h1>Your Dashboard</h1>
     <div class="card-offers mt-0">
-      <% if @last_offer.user == current_user %>
+      <% if Offer.last.user == current_user %>
         <h3><strong>Your order is still pending</strong></h3>
       <% else %>
-          <h3>This is <strong><%= @last_offer.user.first_name %></strong>'s offer listing! Here are the details: </h3>
+          <h3>This is <strong><%= Offer.last.user.first_name %></strong>'s offer listing! Here are the details: </h3>
       <% end %>
         <div>
 
         <div>
-            <p> <strong> Pickup address: </strong> <%= @last_offer.user.address %> </p>
-            <p> <strong> Phone number: </strong> <%= @last_offer.user.phone_number %> </p>
-            <p> <strong> Pickup time:  </strong><%= @last_offer.timeslot %></p>
+            <p> <strong> Pickup address: </strong> <%= Offer.last.user.address %> </p>
+            <p> <strong> Phone number: </strong> <%= Offer.last.user.phone_number %> </p>
+            <p> <strong> Pickup time:  </strong><%= Offer.last.timeslot %></p>
 
           </div>
-              <p> <strong> Plastic bottles: </strong> <%= @last_offer.plastic_bottles %> </p>
-              <p> <strong> Glass bottles: </strong> <%= @last_offer.glass_bottles %> </p>
-              <p> <strong> Bottle crates: </strong> <%= @last_offer.crates %> </p>
-              <p> <strong> Tip: </strong> €<%= @last_offer.tip %> </p>
-              <p> <strong> Comment: </strong> <%= @last_offer.comment %> </p>
+              <p> <strong> Plastic bottles: </strong> <%= Offer.last.plastic_bottles %> </p>
+              <p> <strong> Glass bottles: </strong> <%= Offer.last.glass_bottles %> </p>
+              <p> <strong> Bottle crates: </strong> <%= Offer.last.crates %> </p>
+              <p> <strong> Tip: </strong> €<%= Offer.last.tip %> </p>
+              <p> <strong> Comment: </strong> <%= Offer.last.comment %> </p>
         </div>
         <div class = "flex-dark">
-          <button type="button" class="btn accept-btn"><%= link_to "Delete", offer_path(@last_offer), method: :delete %></button>
+          <button type="button" class="btn accept-btn"><%= link_to "Delete", offer_path(Offer.last), method: :delete %></button>
         </div>
         <br>
         <div class = "flex-dark">
-          <button type="button" class="btn accept-btn"><%= link_to "Edit", edit_offer_path(@last_offer) %></button>
+          <button type="button" class="btn accept-btn"><%= link_to "Edit", edit_offer_path(Offer.last) %></button>
         </div>
       </div>
 </div>
