--- a/app/views/offers/_map_box.html.erb
+++ b/app/views/offers/_map_box.html.erb
@@ -1,6 +1,10 @@
+
+
 <p><strong> Donor name: </strong><%= user.first_name %> </p>
 <p><strong> Pickup address: </strong><%= user.address %> </p>
-<p><strong> Timeslot: <%= @offers.last.timeslot %></p>
+
+<p><strong> Timeslot: <%= user.offers.last.timeslot %></p>
+
 <p><strong> Plastic bottles qty: </strong><%= @offers.last.plastic_bottles %></p>
 <p><strong> Glass bottles qty: </strong><%= @offers.last.glass_bottles %></p>
 <p><strong> Crates qty:  </strong><%= @offers.last.crates %></p>
